--- a/app/assets/stylesheets/components/_page-checkbox.scss
+++ b/app/assets/stylesheets/components/_page-checkbox.scss
@@ -1,4 +1,5 @@
 .titre-checkbox {
+    color:#95999A;
     border: 1px solid lightgrey;
     border-radius: 25px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
