--- a/app/views/diseases/need_know.html.erb
+++ b/app/views/diseases/need_know.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 	<div class="chiante">
-	<a href="tel:0616403054" class="a-link-secours">En cas de doute ou d'urgence vitale appelez le 15 ici !</a>
+	<a href="tel:15" class="a-link-secours">En cas de doute ou d'urgence vitale appelez le 15 ici !</a>
 	</div>
 	<div class=" d-flex justify-content-end">
 		<%= link_to "Précédent", :back, class: "btn btn-outline-primary-precedent" %>
