--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -7,6 +7,7 @@
     padding: 20px;
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
     border-radius: 20px;
+    color:#95999A;
 }
 
 .btn-next-child {
@@ -14,7 +15,7 @@
 	height: 50px;
 	border: 1px solid #FE7988;;
 	background-color: #FE7988;;
-	color:#95999A;
+	color:white;
 	font-weight: bolder;
 	border-radius: 20px;
 	margin-left: 30%;
@@ -22,7 +23,7 @@
 }
 
 .btn-next-child:hover{
-	color:#95999A;
+	color:white;
 	text-decoration: none;
 }
 
