--- a/app/assets/stylesheets/components/_cards_diseases.scss
+++ b/app/assets/stylesheets/components/_cards_diseases.scss
@@ -4,4 +4,6 @@
     color:#95999A;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
+    height: 70vh;
+    overflow: scroll;
 }
