--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -1,3 +1,4 @@
+<div id="contenair-global">
 <div class="card-title">
 	<h1 class="d-flex justify-content-center">Index</h1>
 </div>
@@ -12,7 +13,7 @@
 		</div>
 	</div>	
 </div>
-
+</div>
 
 <footer>
 	<div id="navbar-contenair">
