--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -35,11 +35,19 @@
     padding: 10px;
 }
 
+.trash a:link{
+    text-decoration: none !important;
+}
+
 .edit {
     position: absolute;
     right: 25px;
     top: 0px;
     padding: 10px;
+}
+
+.edit a:link{
+    text-decoration: none !important;
 }
 
 .container-profil {
