--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
     <link rel="manifest" href="/manifest.json">
     <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
-
+    <%= stylesheet_pack_tag "application", 'data-turbolinks-track': "reload", defer: true %>
     <%= javascript_pack_tag "application", 'data-turbolinks-track': "reload", defer: true %>
   </head>
 
