--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -4,39 +4,36 @@
     text-align: center;
     width: 100%;
     padding: 20px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
-    color:#95999A;
+    color: #95999A;
 }
 
-#child_birth_date_1i{
-	padding:2.5% !important;
+#child_birth_date_1i {
+    padding: 2.5% !important;
 }
 
-#child_birth_date_2i{
-  padding:0 !important;
+#child_birth_date_2i {
+    padding: 0 !important;
 }
 
-#child_birth_date_3i{
-  padding:2.8% !important;
+#child_birth_date_3i {
+    padding: 2.8% !important;
 }
 
 .btn-next-child {
-	width: 145px;
-	height: 50px;
-	border: 1px solid #FE7988;
-	background-color: #FE7988;
-	color:white;
-	font-weight: bolder;
-	border-radius: 20px;
-	margin-left: 30%;
-	margin-top: 10px;
+    width: 145px;
+    height: 50px;
+    border: 1px solid #FE7988;
+    background-color: #FE7988;
+    color: white;
+    font-weight: bolder;
+    border-radius: 20px;
+    margin-left: 30%;
+    margin-top: 10px;
 }
 
-.btn-next-child:hover{
-	color:white;
-	text-decoration: none;
+.btn-next-child:hover {
+    color: white;
+    text-decoration: none;
 }
-
-
-
