--- a/app/assets/stylesheets/components/_page-checkbox.scss
+++ b/app/assets/stylesheets/components/_page-checkbox.scss
@@ -1,5 +1,5 @@
 .titre-checkbox {
-    color:#95999A;
+    color: #95999A;
     border: 1px solid lightgrey;
     border-radius: 25px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
@@ -11,7 +11,7 @@
 }
 
 .container_new_analysis {
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
 }
 
@@ -20,14 +20,14 @@
     display: block;
     margin-top: 10px;
     position: relative;
-    
+
     label {
         margin-top: 5%;
         margin-bottom: 5%;
         padding: 12px 30px;
         display: block;
         text-align: left;
-        color:#95999A;
+        color: #95999A;
         position: relative;
         z-index: 2;
         transition: color 200ms ease-in;
@@ -130,7 +130,7 @@ code {
     height: 79px;
     border: 1px solid #66BBEC;
     background-color: #66BBEC;
-    color:white;
+    color: white;
     font-weight: bolder;
     border-radius: 25px;
     border-radius: 20px;
@@ -141,5 +141,5 @@ code {
 
 .btn-analyse-home:hover {
     text-decoration: none;
-   color:white;
+    color: white;
 }
