--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= meta_title %></title>
+    <%= favicon_link_tag %>
     <meta name="description" content="<%= meta_description %>">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -28,7 +29,7 @@
 <meta name="twitter:description" content="<%= meta_description %>">
 <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
 <meta name="twitter:image:src" content="<%= meta_image %>">
-<%= favicon_link_tag "favicon.ico" %>
+
   </head>
   <body>
     <%= render "shared/navbar" %>
